--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "sass": "^1.56.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.3.2",
